--- a/web/app/elements/message-type-chooser/message-type-chooser.html
+++ b/web/app/elements/message-type-chooser/message-type-chooser.html
@@ -16,6 +16,7 @@
 
 <link rel="import" href="../../bower_components/paper-radio-group/paper-radio-group.html">
 <link rel="import" href="../../bower_components/paper-radio-button/paper-radio-button.html">
+<link rel="import" href="../../bower_components/paper-tooltip/paper-tooltip.html">
 
 
 <dom-module id="message-type-chooser">
@@ -28,10 +29,15 @@
 
   <template>
     <paper-radio-group on-change="messageTypeChangeHandler">
-      <paper-radio-button name="unicast">Unicast</paper-radio-button>
-      <paper-radio-button name="multicast">Multicast</paper-radio-button>
-      <paper-radio-button name="pubsub">Pubsub</paper-radio-button>
-      <paper-radio-button name="notification_group">Notification Group</paper-radio-button>
+      <paper-radio-button name="unicast" id="unicast">Unicast</paper-radio-button>
+      <paper-radio-button name="multicast" id="multicast">Multicast</paper-radio-button>
+      <paper-radio-button name="pubsub" id="pubsub">Pubsub</paper-radio-button>
+      <paper-radio-button name="notification_group" id="notification_group">Notification Group</paper-radio-button>
+
+      <paper-tooltip for="unicast" margin-top="-10">Single recipient, HTTP or XMPP</paper-tooltip>
+      <paper-tooltip for="multicast" margin-top="-10">Multiple recipients, HTTP only</paper-tooltip>
+      <paper-tooltip for="pubsub" margin-top="-10">Single topic, HTTP or XMPP</paper-tooltip>
+      <paper-tooltip for="notification_group" margin-top="-10">Single group, HTTP or XMPP</paper-tooltip>
     </paper-radio-group>
   </template>
 
