iOS app to register and unregister with GCM
Change-Id: I7ae619086057f3c561ef88c1d4c1f3dad249acea

--- a/chrome/index.html
+++ b/chrome/index.html
@@ -59,14 +59,19 @@
     </div>
   </div>
 
+  <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+    <textarea class="mdl-textfield__input" type="text" id="appServerStatus" rows="2" cols="65"></textarea>
+    <label class="mdl-textfield__label" for="appServerStatus">App Server Registration Status</label>
+  </div>
+
   <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label is-focused">
     <textarea class="mdl-textfield__input" type="text" id="status" rows="4" cols="65"></textarea>
     <label class="mdl-textfield__label" for="status">GCM Registration Status</label>
   </div>
 
-  <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-    <textarea class="mdl-textfield__input" type="text" id="appServerStatus" rows="2" cols="65"></textarea>
-    <label class="mdl-textfield__label" for="appServerStatus">App Server Registration Status</label>
+  <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label is-focused">
+    <textarea class="mdl-textfield__input" type="text" id="message" rows="5" cols="65"></textarea>
+    <label class="mdl-textfield__label" for="message">Message Received</label>
   </div>
 
 </body>
